# TAZ-BOT

./: Cargo.toml  LICENSE  README.md
contracts/: Arbitrage.sol  FlashLoan.sol  FrontRunning.sol  Hft.sol  Liquidation.sol  Sandwich.sol
src/: main.rs
src/modules/: arbitrage.rs  dashboard.rs  flashloan.rs  frontrunning.rs  hft.rs  liquidation.rs  monitoring.rs  sandwich.rs
src/modules/abi/: aave_flashloan_abi.json  arbitrage_abi.json  compound_comptroller_abi.json  ctoken_abi.json  frontrunning_abi.json  hft_abi.json  liquidation_abi.json  sandwich_abi.json  sushiswap_router_abi.json  token_approval_abi.json  uniswap_v2_router_abi.json
